--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,5 +14,9 @@
     "nuxt": "^3.7.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@master/css": "^1.37.8",
+    "@tabler/icons-vue": "^2.38.0"
   }
 }
