--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@master/css": "^1.37.8",
+    "@nuxtjs/i18n": "^8.0.0-rc.5",
     "@tabler/icons-vue": "^2.38.0"
   }
 }
