--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@master/css": "^1.37.8",
     "@nuxtjs/i18n": "^8.0.0-rc.5",
-    "@tabler/icons-vue": "^2.38.0"
+    "@tabler/icons-vue": "^2.38.0",
+    "@vueuse/nuxt": "^10.4.1"
   }
 }
