--- a/new/frontend/package.json
+++ b/new/frontend/package.json
@@ -10,8 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/i18n": "^8.0.0",
+    "@vueuse/core": "^10.7.2",
+    "@vueuse/nuxt": "^10.7.2",
     "nuxt": "^3.9.3",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@master/css": "^1.37.8",
+    "@pinia/nuxt": "^0.5.1",
+    "@tabler/icons-vue": "^2.46.0",
+    "pinia": "^2.1.7"
   }
 }
